@@ -312,11 +312,11 @@ argument_list|(
 literal|"function add(a,b) { return a + b }"
 argument_list|)
 expr_stmt|;
-name|Double
+name|Number
 name|result
 init|=
 call|(
-name|Double
+name|Number
 call|)
 argument_list|(
 operator|(
@@ -391,11 +391,11 @@ argument_list|(
 name|reader
 argument_list|)
 expr_stmt|;
-name|Double
+name|Number
 name|result
 init|=
 call|(
-name|Double
+name|Number
 call|)
 argument_list|(
 operator|(
@@ -479,11 +479,11 @@ argument_list|(
 literal|"function add() { return a + b }"
 argument_list|)
 expr_stmt|;
-name|Double
+name|Number
 name|result
 init|=
 call|(
-name|Double
+name|Number
 call|)
 argument_list|(
 operator|(
@@ -557,11 +557,11 @@ argument_list|(
 literal|"def add(a,b); a + b; end"
 argument_list|)
 expr_stmt|;
-name|Long
+name|Number
 name|result
 init|=
 call|(
-name|Long
+name|Number
 call|)
 argument_list|(
 operator|(
