@@ -387,17 +387,6 @@ name|engine
 operator|.
 name|put
 argument_list|(
-literal|"testCase"
-argument_list|,
-name|StatelessScriptUpdateProcessorFactoryTest
-operator|.
-name|this
-argument_list|)
-expr_stmt|;
-name|engine
-operator|.
-name|put
-argument_list|(
 literal|"functionMessages"
 argument_list|,
 name|functionMessages
@@ -620,17 +609,6 @@ name|ScriptEngine
 name|engine
 parameter_list|)
 block|{
-name|engine
-operator|.
-name|put
-argument_list|(
-literal|"testCase"
-argument_list|,
-name|StatelessScriptUpdateProcessorFactoryTest
-operator|.
-name|this
-argument_list|)
-expr_stmt|;
 name|engine
 operator|.
 name|put
